# clip-image-deduper

./: .gitignore  README.md  pyproject.toml  requirements.txt
clip_training/: dataset_preprocessing.py
src/clip_image_deduper/: __init__.py  clip_encoding.py  db_processing.py  dedupe_import_dir.py  generic_deduper.py  main.py  similarity.py  update_db.py
